Criada página inicial do projeto
Criada a página principal do projeto e criado o formulário de adição de usuários.

--- a/app/views/index/index.phtml
+++ b/app/views/index/index.phtml
@@ -1,5 +1,29 @@
 <h1>
-	Home page
+	Bem vindos
 </h1>
 
-<?php echo $this->tag->linkTo('/signup', 'Sign Up Here!'); ?>
+<p>
+	Este é um sistema esperimental para aprender a utilizar o framework phalcon. Você pode utilizá-lo como meio de pesquisa
+	ou para qualquer outra coisa. 
+</p>
+
+<p>
+	Este sistema terá como objetivo gerenciar lista de tarefas e afazeres dos usuários cadastrados, assim como também, poder
+	enviar tarefas para amigos cadastrados no sistema.
+</p>
+
+<p>
+	Cada usuário terá um cadastro diferente, todos poderão logar no sistema e <strong>ver/editar/finalizar/remover</strong> suas tarefas.
+</p>
+
+<p>
+	A ideia futura é também gerar uma interface com vuejs e reactjs, por isso, será criado uma api que também será publicada junto com o projeto.
+</p>
+
+<p>
+	Esse projeto inicialmente utilizará somente o framework phalcon. A tentativa será conseguir utilizar a maioria de suas funcionalidades do framework
+	dentro deste projeto. 
+	Vou tentar manter informações sobre o projeto, das dificuldades que tive e resumir algumas das funções báscias.
+	Enfim, tudo que for possível, irei descrever no próprio projeto.
+</p>
+
